--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-feed": "^1.3.20",
     "gatsby-plugin-google-analytics": "^1.0.29",
+    "gatsby-plugin-manifest": "^1.0.25",
     "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-purify-css": "^2.2.1",
     "gatsby-plugin-react-helmet": "^1.0.8",
