--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "gatsby-remark-responsive-iframe": "^1.4.18",
     "gatsby-remark-smartypants": "^1.4.12",
     "gatsby-source-filesystem": "^1.5.31",
-    "gatsby-transformer-remark": "^1.7.40",
+    "gatsby-transformer-remark": "^1.7.42",
     "gatsby-transformer-sharp": "^1.6.22",
     "lodash": "^4.17.5",
+    "prismjs": "^1.14.0",
     "typography-theme-wordpress-2016": "^0.15.10"
   },
   "devDependencies": {
